# binance-data-fetcher

./: .gitignore  LICENSE  README.md  pyproject.toml
src/binance_fetcher/: __init__.py  binance_fetcher.py
src/binance_fetcher.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
