[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "binance_fetcher"
version = "0.1.0"
dependencies = [
    "appdirs",
    "pandas",
    "requests",
    "pathlib",
    "rich",
    "fastparquet"
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["binance_fetcher"]